WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287544
[WebGPU] Expand env var list for WKTR when enableMetalShaderValidationForTesting=1
https://bugs.webkit.org/show_bug.cgi?id=287544
Summary
[WebGPU] Expand env var list for WKTR when enableMetalShaderValidationForTest...
Mike Wyrzykowski
Reported
2025-02-11 21:41:05 PST
Default value of MTL_SHADER_VALIDATION_GPUOPT_ENABLE_RUNTIME_STACKTRACE=1 appears to be causing false positives. We should set that to zero
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-11 21:42:23 PST
<
rdar://problem/144670062
>
Mike Wyrzykowski
Comment 2
2025-02-11 21:45:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40468
EWS
Comment 3
2025-02-12 10:20:02 PST
Committed
290279@main
(89c125274c3d): <
https://commits.webkit.org/290279@main
> Reviewed commits have been landed. Closing PR #40468 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug