[WebGPU] Expand env var list for WKTR when enableMetalShaderValidationForTesting=1 https://bugs.webkit.org/show_bug.cgi?id=287544 rdar://144670062

Reviewed by Tadeu Zagallo.

Default value of MTL_SHADER_VALIDATION_GPUOPT_ENABLE_RUNTIME_STACKTRACE is 1
when MTL_SHADER_VALIDATION is 1. However there appear to be bugs in edge cases
in the validator. Runtime stacktrace is not providing useful information in our
usage, so set to 0 which matches our fuzzers.

* Source/WebKit/GPUProcess/cocoa/GPUProcessCocoa.mm:
(WebKit::GPUProcess::platformInitializeGPUProcess):

Canonical link: https://commits.webkit.org/290279@main